--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     }
   },
   "include": ["src"],
-  "exclude": ["src/lib/preview-server.ts", "src/examples", "preview-server", "api"],
+  "exclude": ["src/examples", "preview-server", "api"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
